# Mkts

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  main.py  nixpacks.toml  pyproject.toml  railway.json  replit.md  requirements.txt
docs/: ARCHITECTURE.md  CONTRARIAN-RESEARCH.md  RESEARCH.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
golf-sweep/: .env.example  .gitignore  README.md  package-lock.json  package.json
routers/: ai.py  alerts.py  brief.py  charts.py  company.py  compare.py  csv_upload.py  db_portfolio.py  events.py  financials.py  home.py  macro.py  market_monitor.py  markets.py  news.py  options.py  peers.py  portfolio.py  portfolio_import.py  quotes.py  search.py  terminal.py  ws.py
schemas/: alerts.py  brief.py  chart.py  company.py  compare.py  events.py  financials.py  home.py  market_monitor.py  markets.py  news.py  options.py  peers.py  portfolio.py  quote.py
services/: ai_service.py  alerts_service.py  brief_service.py  cache_service.py  chart_service.py  compare_service.py  csv_service.py  database.py  eodhd_service.py  events_service.py  financials_service.py  finnhub_service.py  fred_service.py  fx_service.py  indicators.py  market_data_service.py  market_monitor_service.py  marketaux_service.py  markets_service.py  news_service.py  ons_service.py  openfigi_service.py  options_service.py  peers_service.py  portfolio_parser.py  portfolio_service.py  yfinance_service.py
static/: ai.js  app.js  drawing.js  index.html  portfolio.js  style.css  ws.js
(+199 files in other folders)
