[project]
name = "mkts"
version = "5.1.0"
description = "MKTS — Market Terminal & Portfolio Intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn==0.42.0",
    "yfinance==1.2.0",
    "aiohttp==3.13.3",
    "python-dotenv",
    "anthropic==0.86.0",
    "sqlalchemy[asyncio]==2.0.48",
    "aiosqlite==0.22.1",
    "redis[asyncio]==7.4.0",
    "websockets==16.0",
    "openpyxl==3.1.5",
]
